[package]
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>", "Rust Embedded Community Developers"]
categories = ["embedded", "no-std"]
description = "A basic SD/MMC driver for Embedded Rust."
edition = "2021"
keywords = ["sdcard", "mmc", "embedded", "fat32"]
license = "MIT OR Apache-2.0"
name = "embedded-sdmmc"
readme = "README.md"
repository = "https://github.com/rust-embedded-community/embedded-sdmmc-rs"
version = "0.7.0"

[dependencies]
byteorder = {version = "1", default-features = false}
defmt = {version = "0.3", optional = true}
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
heapless = "^0.8"
log = {version = "0.4", default-features = false, optional = true}

futures = { version = "0.3", default-features = false, features = ["async-await", "executor"] }

[dev-dependencies]
chrono = "0.4"
embedded-hal-bus = "0.1.0"
env_logger = "0.10.0"
flate2 = "1.0"
hex-literal = "0.4.1"
sha2 = "0.10"

[features]
default = ["log", "asynch"]
defmt-log = ["dep:defmt"]
log = ["dep:log"]
# Enable Async support for SdCard and AsyncBlockDevice trait
asynch = ["dep:embedded-hal-async"]
